@@ -54,7 +54,6 @@ Instructions for compilation
     SDK have spaces in their installation path. On Windows you can use spaces in
     these paths if you replace the components containing spaces with the "8.3" name
     during configuration of the SDK as follows:
-      SDK = C:\PROGRA~1\OpenOffice.org\BAS
       Office = C:\PROGRA~1\OpenOffice.org
       Office Base = C:\PROGRA~1\OpenOffice
       URE = C:\PROGRA~1\OpenOffice.org\URE
@@ -105,8 +104,8 @@ site for openoffice.org-voikko is located at http://voikko.sourceforge.net
 Change history
 ==============
 
-Version 2.0 is an almost total rewrite of the previous version 1.2. This
-version is designed to work well with libvoikko and aims to use the best
+Version 2.0 was an almost total rewrite of the previous version 1.2. This
+version was designed to work well with libvoikko and aimed to use the best
 current practices for OpenOffice.org extension development. The old code
 was based on the internals of OpenOffice.org 1.0 and designed to work with
 a non-free Finnish spellchecking library.
